<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nuturtle_description</name>
  <version>0.0.4</version>
  <description>This package displays multiple turtlebot3 models in RViz, each appearing with a different color. It also allows you to change the physical properties of the robot by editing a yaml file.</description>
  <maintainer email="rintarohshima2023@u.northwestern.edu">Rintaroh Shima</maintainer>
  <license>APLv2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
